--- a/ThyoneMC/ThyoneMC.csproj
+++ b/ThyoneMC/ThyoneMC.csproj
@@ -77,8 +77,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Windows\ServerAddWindow.xaml.cs">
-      <DependentUpon>ServerAddWindow.xaml</DependentUpon>
+    <Compile Include="Core\MyRegex.cs" />
+    <Compile Include="Core\CommandLine.cs" />
+    <Compile Include="Windows\ServerWindowPopup.xaml.cs">
+      <DependentUpon>ServerWindowPopup.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -122,7 +124,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Windows\ServerAddWindow.xaml">
+    <Page Include="Windows\ServerWindowPopup.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
