--- a/ThyoneMC/ThyoneMC.csproj
+++ b/ThyoneMC/ThyoneMC.csproj
@@ -116,7 +116,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Themes\ServerButton.xaml">
+    <Page Include="Themes\ServerWindowButton.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
